--- a/src/VimeoComponent.css
+++ b/src/VimeoComponent.css
@@ -1,5 +1,4 @@
-.container,
-button {
+.container {
   padding: 2rem;
 }
 
@@ -9,5 +8,5 @@ button {
 }
 
 button {
-  appearance: none;
+  cursor: pointer;
 }
